--- a/exercicios/ex022/fundo007.html
+++ b/exercicios/ex022/fundo007.html
@@ -6,13 +6,17 @@
     <title>Aliamento Vertical</title>
     <style>
         #container {
+            background-image: url("imagens/target001.png");
+            background-size: 100% 100%;
             position: relative;
-            height: 500px;
+            height: 96vh;
             padding: 10px;
             background-color: purple;
         }
 
         #conteudo {
+            background-image: url("imagens/target001.png");
+            background-size: 100% 100%;
             position: absolute;
             height: 200px;
             width: 400px;
@@ -20,6 +24,8 @@
 
             left: 50%;
             top: 50%;
+
+            transform: translate(-50%, -50%);
         }
     </style>
 </head>
